[package]
name = "c4lc"
version = "0.2.0"
edition = "2024"
documentation = "https://docs.rs/c4lc/"
description = "A crate to help you perform mathematical calculations, including addition, subtraction, multiplication and division, others included"
repository = "https://github.com/Darethan025/C4lc"
homepage = "https://github.com/Darethan025/C4lc"
license-file = "LICENSE"
readme = "README.md"
keywords = ["calculate", "calc", "calculator", "c4l", "math", "maths"]
categories = ["mathematics", "command-line-utilities", "beginner"]
exclude = ["/target"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
